# agentspring

./: .gitignore  AGENTIC_ROADMAP.md  Dockerfile  Makefile  QUICKSTART.md  README.md  TOOL_CONFIGURATION.md  alembic.ini  docker-compose.full.yml  docker-compose.yml  dump.rdb  env.example  filebeat.yml  grafana-dashboard.json  main.py  prometheus.yml  promtail-config.yaml  pyproject.toml  requirements-llm.txt  requirements.txt  server.py  setup.py  start.sh  test_requirements.txt
.github/workflows/: ci.yml
agentspring/: README.md  README.md.bak  __init__.py  agent.py  api.py  api_versioning.py  app_loader.py  audit.py  auth.py  auth_oidc.py  celery_app.py  cli.py  config.py  ingestion.py  llm.py  logging_config.py  main.py  metrics.py  models.py  multi_tenancy.py  observability.py  orchestration.py  rag_versioned.py  rate_limit.py  rbac.py  run_tests.py  task_base.py  tasks.py  tasks_ingest.py  test.sh  uploads_sign.py
agentspring.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
agentspring/agent/: __init__.py
agentspring/api/endpoints/: __init__.py
agentspring/core/: __init__.py  agent.py  base.py  exceptions.py  extensions.py
agentspring/db/: __init__.py  models.py  models_versioned.py  session.py
agentspring/db/migrations/: env.py
agentspring/db/migrations/versions/: 5aed3105a5ad_initial_migration.py
agentspring/goals/: __init__.py
agentspring/llm/: README.md  __init__.py  base.py  registry.py
agentspring/llm/providers/: __init__.py  anthropic.py  azure_openai.py  mock.py  openai.py
agentspring/loop/: __init__.py
agentspring/memory/: __init__.py
agentspring/middleware/: agent_depth.py
agentspring/planner/: __init__.py
agentspring/plugin/: __init__.py  base.py  exceptions.py  manager.py
agentspring/plugins/: __init__.py
agentspring/plugins/example/: __init__.py  plugin.json  plugin.py
agentspring/services/: registry.py
agentspring/tests/: test_api.py  test_app_loader.py  test_celery_app.py  test_celery_trigger.py  test_cli.py  test_imports.py  test_models.py  test_scenarios.py  test_tasks.py
agentspring/tools/: __init__.py  agents_catalog.py  builtin_embeddings.py  builtin_http.py  builtin_math.py  builtin_rag.py  business.py  communication.py  consensus.py  critic.py  data_storage.py  delegate.py  media.py  router.py  system.py  web_search.py
agentspring/workflow/: __init__.py
alembic/: README  env.py
charts/agentspring/: Chart.yaml  values.yaml
charts/agentspring/templates/: _helpers.tpl  deployment-app.yaml  deployment-console.yaml  deployment-worker.yaml  ingress.yaml
console/: index.html  package.json  tsconfig.json
console/src/: main.tsx
console/src/auth/: oidc.ts
console/src/ui/: AdminPanel.tsx  App.tsx
demos/: __init__.py  agent_demo.py  travel_planner.py  travel_planner_openai.py
demos/templates/: index.html
docker/console/: Dockerfile.console  spa.conf
examples/: EXAMPLE.md  agent_workflow_demo.py  api_example.py  complaints.csv  custom_prompt_example.py  custom_tools.py  discover_endpoints.py  example.py  example_api.py  full_stack_example.py  summary.txt  tool_chaining_example.py  workflow_example.py
examples/customer_support_agent/: README.md  endpoints.py  run.py  tasks.py
examples/customer_support_agent/tests/: test_api.py  test_async_polling.py  test_quickstart.py
examples/customer_support_agent/ui/: wave_app.py
examples/simple_agent/: README.md  __init__.py  endpoints.py
examples/starter_agent/: README.md  endpoints.py
k8s/: app-deployment.yaml  app-service.yaml  celery-worker-deployment.yaml  configmap.yaml  redis-deployment.yaml  secret.yaml
scripts/: backup_db.sh  init_db.py  restore_db.sh
sdks/js/: package.json  tsconfig.json
sdks/js/src/: index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/agentspring_sdk/: __init__.py  client.py
tests/: __init__.py  test_agent_workflow.py  test_api.py  test_api_versioning.py  test_app_loader.py  test_async_polling.py  test_celery_app.py  test_celery_trigger.py  test_cli.py  test_example_plugin.py  test_health.py  test_imports.py  test_llm.py  test_llm_providers.py  test_metrics.py  test_models.py  test_multi_tenancy.py  test_orchestration.py  test_plugin_system.py  test_quickstart.py  test_run_tests.py  test_scenarios.py  test_tasks.py  test_tools_business.py  test_tools_communication.py  test_tools_data_storage.py  test_tools_init.py  test_tools_media.py  test_tools_system.py  test_tools_web_search.py
