[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentspring"
version = "0.1.0"
description = "A flexible and extensible framework for building agentic workflows"
authors = [
    { name = "Navdeep Gill", email = "mr.navdeepgill@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "httpx>=0.23.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "pydantic-settings>=2.0.0",
    "fastapi-limiter>=0.1.5",
    "redis>=4.5.0",
    "celery>=5.3.0",
    "prometheus-client>=0.17.0",
    "python-jose[cryptography]>=3.3.0",
    "beautifulsoup4>=4.12.0",
    "packaging>=21.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.20.0",
    "pytest-cov>=4.0.0",
    "pytest-httpx>=0.22.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "typer[all]>=0.7.0",
    "rich>=12.5.1",
    "python-dotenv>=0.20.0",
    "types-redis>=4.5.0",
    "types-python-jose>=3.3.0",
    "types-beautifulsoup4>=4.12.0",
    "types-requests>=2.28.0",
    "types-pyyaml>=6.0.0",
    "sqlalchemy-stubs>=0.0.2",
    "types-python-dateutil>=2.8.0",
    "types-pytz>=2022.7.0"
]

[project.urls]
Homepage = "https://github.com/navdeep-G/agentspring"
"Bug Tracker" = "https://github.com/navdeep-G/agentspring/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentspring*"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true

[tool.mypy]
python_version = "3.9"
warn_return_any = false
disallow_untyped_defs = false
ignore_missing_imports = true
